--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col">
             <a class="card d-flex flex-column align-items-center" href="#">
-              <svg height="24" class="card-icon">
+              <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#brush"></use>
               </svg>
               <span class="card-text">Дизайн</span>
@@ -109,7 +109,7 @@
           <!-- /.col -->
           <div class="col">
             <a class="card d-flex flex-column align-items-center" href="#">
-              <svg height="24" class="card-icon">
+              <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#browser"></use>
               </svg>
               <span class="card-text">Разработка</span>
@@ -120,7 +120,7 @@
           <!-- /.col -->
           <div class="col">
             <a class="card d-flex flex-column align-items-center" href="#">
-              <svg height="24" class="card-icon">
+              <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#edit"></use>
               </svg>
               <span class="card-text">Копирайтинг</span>
@@ -131,7 +131,7 @@
           <!-- /.col -->
           <div class="col">
             <a class="card d-flex flex-column align-items-center" href="#">
-              <svg height="24" class="card-icon">
+              <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#fingerprint"></use>
               </svg>
               <span class="card-text">Безопасность</span>
@@ -142,7 +142,7 @@
           <!-- /.col -->
           <div class="col">
             <a class="card d-flex flex-column align-items-center" href="#">
-              <svg height="24" class="card-icon">
+              <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#camera"></use>
               </svg>
               <span class="card-text">Видео</span>
@@ -153,7 +153,7 @@
           <!-- /.col -->
           <div class="col">
             <a class="card d-flex flex-column align-items-center" href="#">
-              <svg height="24" class="card-icon">
+              <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#school"></use>
               </svg>
               <span class="card-text">Образование</span>
