--- a/index.html
+++ b/index.html
@@ -16,16 +16,44 @@
   <body>
     <header class="header pb-5">
       <div class="container">
-        <div class="row align-items-center py-3">
-          <div class="col-2">
+        <div
+          class="
+            d-flex
+            pt-4
+            d-lg-none
+            align-items-center
+            justify-content-between
+          "
+        >
+          <a href="/" class="logo-link">
+            <img src="img/logo.svg" alt="logo: find your job" />
+          </a>
+          <a href="#" class="menu-button">
+            <img src="img/menu-burger.svg" alt="icon: burger menu" class="" />
+          </a>
+        </div>
+        <div
+          class="
+            row
+            align-items-center
+            py-3
+            navbar
+            flex-column flex-lg-row
+            justify-content-center
+          "
+        >
+          <a href="#" class="close-button d-lg-none">&times;</a>
+          <div class="col-lg-2 d-flex justify-content-center mb-5 mb-lg-0">
             <a href="/" class="logo-link">
               <img src="img/logo.svg" alt="logo: find your job" />
             </a>
           </div>
           <!-- /.col -->
-          <div class="col d-flex align-items-center justify-content-center">
+          <div class="col-lg d-flex justify-content-center mb-5 mb-lg-0">
             <nav class="nav">
-              <ul class="menu d-flex">
+              <ul
+                class="menu d-flex flex-column flex-lg-row align-items-center"
+              >
                 <li class="menu-item">
                   <a href="#" class="menu-link">Главная</a>
                 </li>
@@ -39,15 +67,23 @@
             </nav>
           </div>
           <!-- /.col -->
-          <div class="col-3 d-flex align-items-center justify-content-end">
+          <div
+            class="
+              col-lg-3
+              d-flex
+              align-items-center
+              justify-content-center justify-lg-content-end
+              flex-column flex-lg-row
+            "
+          >
             <a href="#" class="button button-link">Войти</a>
             <a href="#" class="button button-primary">Регистрация</a>
           </div>
           <!-- /.col -->
         </div>
         <!-- /.row -->
-        <div class="row pt-5">
-          <div class="col-5">
+        <div class="row pt-5 hero">
+          <div class="col-xxl-5 col-lg-7 col-md-9">
             <h1 class="hero-title">Найдите удаленную работу вашей мечты</h1>
             <p class="hero-text">
               Создайте резюме или отправьте отклик на вакансию в&nbsp;компании с
@@ -63,13 +99,15 @@
                     src="img/search.svg"
                     alt="icon: search"
                   />
-                  <span class="button-text">Искать вакансии</span>
+                  <span class="button-text d-none d-md-inline-block"
+                    >Искать вакансии</span
+                  >
                 </button>
               </div>
             </form>
             <!-- /.input-group -->
             <div class="tags-group">
-              <span class="text-label">Например:</span>
+              <span class="tags-label">Например:</span>
               <a href="#" class="tag">Front-end</a>
               <a href="#" class="tag">Backend</a>
               <a href="#" class="tag">Designer</a>
@@ -78,7 +116,7 @@
           <!-- /.tags-group -->
 
           <!-- /.col-5 -->
-          <div class="col-6 offset-1">
+          <div class="col-xxl-6 offset-xxl-1 col-lg-5 mt-5 mt-lg-0">
             <img
               src="img/hero-image.svg"
               alt="image: people with laptops"
@@ -95,7 +133,7 @@
       <div class="container">
         <h2 class="section-title">Категории</h2>
         <div class="row">
-          <div class="col-2">
+          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
             <a class="card d-flex flex-column align-items-center" href="#">
               <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#brush"></use>
@@ -106,7 +144,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col-2">
+          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
             <a class="card d-flex flex-column align-items-center" href="#">
               <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#browser"></use>
@@ -117,7 +155,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col-2">
+          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
             <a class="card d-flex flex-column align-items-center" href="#">
               <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#edit"></use>
@@ -128,7 +166,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col-2">
+          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
             <a class="card d-flex flex-column align-items-center" href="#">
               <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#fingerprint"></use>
@@ -139,7 +177,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col-2">
+          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
             <a class="card d-flex flex-column align-items-center" href="#">
               <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#camera"></use>
@@ -150,7 +188,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col -->
-          <div class="col-2">
+          <div class="col-lg-2 col-md-4 col-sm-6 mb-4 mb-lg-0">
             <a class="card d-flex flex-column align-items-center" href="#">
               <svg height="24" width="24" class="card-icon">
                 <use href="img/icons.svg#school"></use>
@@ -169,69 +207,69 @@
     <section class="section offers">
       <div class="container">
         <h2 class="section-title">Свежие вакансии</h2>
-        <div class="offer d-flex align-items-center">
-          <div class="offer-image"></div>
-          <div class="offer-title">
+        <div class="offer d-flex align-items-center flex-column flex-lg-row">
+          <div class="offer-image mb-4 mb-lg-0"></div>
+          <div class="offer-title mb-4 mb-lg-0">
             <h3 class="offer-heafing">Front-end разработчик</h3>
             <span class="offer-place">Технопарк, Казань</span>
           </div>
           <!-- /.offer-title -->
-          <span class="offer-salary">65 000 ₽</span>
+          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
           <div class="tags-group">
-            <span class="text-label">Требования:</span>
+            <span class="tags-label">Требования:</span>
             <a href="#" class="tag">React</a>
             <a href="#" class="tag">Saas</a>
             <a href="#" class="tag">Figma</a>
           </div>
-          <a href="#" class="more">Подробнее →</a>
+          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
         </div>
-        <div class="offer d-flex align-items-center">
-          <div class="offer-image"></div>
-          <div class="offer-title">
+        <div class="offer d-flex align-items-center flex-column flex-lg-row">
+          <div class="offer-image mb-4 mb-lg-0"></div>
+          <div class="offer-title mb-4 mb-lg-0">
             <h3 class="offer-heafing">Front-end разработчик</h3>
             <span class="offer-place">Технопарк, Казань</span>
           </div>
           <!-- /.offer-title -->
-          <span class="offer-salary">65 000 ₽</span>
+          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
           <div class="tags-group">
-            <span class="text-label">Требования:</span>
+            <span class="tags-label">Требования:</span>
             <a href="#" class="tag">React</a>
             <a href="#" class="tag">Saas</a>
             <a href="#" class="tag">Figma</a>
           </div>
-          <a href="#" class="more">Подробнее →</a>
+          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
         </div>
-        <div class="offer d-flex align-items-center">
-          <div class="offer-image"></div>
-          <div class="offer-title">
+        <div class="offer d-flex align-items-center flex-column flex-lg-row">
+          <div class="offer-image mb-4 mb-lg-0"></div>
+          <div class="offer-title mb-4 mb-lg-0">
             <h3 class="offer-heafing">Front-end разработчик</h3>
             <span class="offer-place">Технопарк, Казань</span>
           </div>
           <!-- /.offer-title -->
-          <span class="offer-salary">65 000 ₽</span>
+          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
           <div class="tags-group">
-            <span class="text-label">Требования:</span>
+            <span class="tags-label">Требования:</span>
             <a href="#" class="tag">React</a>
             <a href="#" class="tag">Saas</a>
             <a href="#" class="tag">Figma</a>
           </div>
-          <a href="#" class="more">Подробнее →</a>
+          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
         </div>
-        <div class="offer d-flex align-items-center">
-          <div class="offer-image"></div>
-          <div class="offer-title">
+        <div class="offer d-flex align-items-center flex-column flex-lg-row">
+          <div class="offer-image mb-4 mb-lg-0"></div>
+          <div class="offer-title mb-4 mb-lg-0">
             <h3 class="offer-heafing">Front-end разработчик</h3>
             <span class="offer-place">Технопарк, Казань</span>
           </div>
           <!-- /.offer-title -->
-          <span class="offer-salary">65 000 ₽</span>
+          <span class="offer-salary mb-4 mb-lg-0">65 000 ₽</span>
           <div class="tags-group">
-            <span class="text-label">Требования:</span>
+            <span class="tags-label">Требования:</span>
             <a href="#" class="tag">React</a>
             <a href="#" class="tag">Saas</a>
             <a href="#" class="tag">Figma</a>
           </div>
-          <a href="#" class="more">Подробнее →</a>
+          <a href="#" class="more mt-5 mt-lg-0">Подробнее →</a>
         </div>
         <div class="offer-all">
           <a href="#" class="button button-primary">Больше вакансий</a>
@@ -259,7 +297,9 @@
                 src="img/envelope.svg"
                 alt="icon: envelope"
               />
-              <span class="button-text">Подписаться</span>
+              <span class="button-text d-none d-md-inline-block"
+                >Подписаться</span
+              >
             </button>
           </div>
         </form>
@@ -270,7 +310,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-lg-3 col-sm-6 mb-5 mn-lg-0 col-7 mx-auto">
             <img
               src="img/logo.svg"
               alt="logo: Find Yoyr Job"
@@ -283,7 +323,7 @@
             <span class="footer-copyright">© 2021</span>
           </div>
           <!-- /.col-3 -->
-          <div class="col-3">
+          <div class="col-lg-3 col-sm-6 mb-5 mn-lg-0 col-7 mx-auto">
             <h3 class="footer-title">Свяжитесь с нами</h3>
             <ul class="footer-list">
               <li class="footer-list-item">
@@ -299,7 +339,7 @@
             </ul>
           </div>
           <!-- /.col-3 -->
-          <div class="col-3">
+          <div class="col-lg-3 col-sm-6 mb-5 mn-lg-0 col-7 mx-auto">
             <h3 class="footer-title">Информация</h3>
             <ul class="footer-list">
               <li class="footer-list-item">
@@ -314,7 +354,7 @@
             </ul>
           </div>
           <!-- /.col-3 -->
-          <div class="col-3">
+          <div class="col-lg-3 col-sm-6 mb-5 mn-lg-0 col-7 mx-auto">
             <h3 class="footer-title">Навигация по сайту</h3>
             <ul class="footer-list">
               <li class="footer-list-item">
@@ -334,5 +374,6 @@
       </div>
       <!-- /.container -->
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
